# todo-backend

./: .gitignore  Procfile  README.md  pyproject.toml
todo/: settings.py  urls.py
todo/old_settings/: base.py  production.py
todo/settings/: __init__.py  base.py  production.py
todos/: models.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py
